--- a/LogisticAppProject/app/src/main/AndroidManifest.xml
+++ b/LogisticAppProject/app/src/main/AndroidManifest.xml
@@ -9,18 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".LoginActivity"></activity>
-
-        <activity android:name=".AyudaUser"></activity>
-        <activity android:name=".Coordinador"></activity>
-        <activity android:name=".Delegado"></activity>
-        <activity android:name=".Distribuidor"></activity>
-        <activity android:name=".JefeSalon"></activity>
-        <activity android:name=".CambioClave"></activity>
-        <activity android:name=".SiteNotificationDetailByRoomActivity"></activity>
+        <activity android:name=".NotificationTestActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".AyudaUser" />
+        <activity android:name=".Coordinador" />
+        <activity android:name=".Delegado" />
+        <activity android:name=".Distribuidor" />
+        <activity android:name=".JefeSalon" />
+        <activity android:name=".CambioClave" />
+        <activity android:name=".SiteNotificationDetailByRoomActivity" />
         <activity android:name=".RoomResumeActivity" />
-
         <activity android:name=".ScanMaterialActivity" />
         <activity android:name=".DepartureRegisterActivity" />
         <activity android:name=".MaterialSearchActivity" />
