--- a/LogisticAppProject/app/src/main/AndroidManifest.xml
+++ b/LogisticAppProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestDetailActivity"></activity>
+        <activity android:name=".SplashActivity"></activity>
+        <activity android:name=".TestDetailActivity" />
         <activity android:name=".TestScanActivity" />
         <activity android:name=".TestSearchActivity" />
         <activity android:name=".MaterialDetailActivity" />
