--- a/LogisticAppProject/app/src/main/AndroidManifest.xml
+++ b/LogisticAppProject/app/src/main/AndroidManifest.xml
@@ -24,19 +24,18 @@
         <activity android:name=".NotificationMaterialActivity" />
         <activity android:name=".SiteResumeActivity" />
         <activity android:name=".NotificationTestActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".AyudaUser" />
-        <activity android:name=".Coordinador" />
+        <activity android:name=".LoginActivity" android:noHistory="true"/>
+        <activity android:name=".CordinatorActivity" />
         <activity android:name=".DelegateActivity" />
-        <activity android:name=".Distribuidor" />
+        <activity android:name=".DistributorActivity"/>
         <activity android:name=".RoomBossActivity" />
-        <activity android:name=".CambioClave" />
+        <activity android:name=".PasswordChangeActivity" />
         <activity android:name=".SiteNotificationDetailByRoomActivity" />
         <activity android:name=".RoomResumeActivity" />
         <activity android:name=".ScanMaterialActivity" />
         <activity android:name=".DepartureRegisterActivity" />
         <activity android:name=".MaterialSearchActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
